--- a/.github/workflows/check-new-release.yml
+++ b/.github/workflows/check-new-release.yml
@@ -2,7 +2,9 @@ name: Check for new NetherSX2-patch release
 
 on:
   schedule:
-    - cron: "0 3 * * *"
+    - cron: '30 5,17 * * *'
+    - cron: '30 5 * * 1,3'
+    - cron: '30 5 * * 2,4'
 
 jobs:
   check-release:
@@ -12,13 +14,15 @@ jobs:
       contents: write
 
     steps:
+      - run: date
+
       # - name: Check out this repository
       #   uses: actions/checkout@v4
       #   with:
       #     persist-credentials: true
-      - name: test
-        run: |
-            echo $GITHUB_TOKEN
+      # - name: test
+      #   run: |
+      #       echo $GITHUB_TOKEN
 
       # - name: Get latest release from NetherSX2-patch
       #   id: get_latest
