--- a/.github/workflows/check-new-release.yml
+++ b/.github/workflows/check-new-release.yml
@@ -2,9 +2,7 @@ name: Check for new NetherSX2-patch release
 
 on:
   schedule:
-    - cron: '30 5,17 * * *'
-    - cron: '30 5 * * 1,3'
-    - cron: '30 5 * * 2,4'
+    - cron: "0 3 * * *"
 
 jobs:
   check-release:
@@ -14,15 +12,13 @@ jobs:
       contents: write
 
     steps:
-      - run: date
-
       # - name: Check out this repository
       #   uses: actions/checkout@v4
       #   with:
       #     persist-credentials: true
-      # - name: test
-      #   run: |
-      #       echo $GITHUB_TOKEN
+      - name: test
+        run: |
+            echo $GITHUB_TOKEN
 
       # - name: Get latest release from NetherSX2-patch
       #   id: get_latest
