--- a/.github/workflows/build-new-release-apk.yml
+++ b/.github/workflows/build-new-release-apk.yml
@@ -27,31 +27,33 @@ jobs:
           echo "Last known release tag: $LAST_TAG"
           echo "Latest release tag: $LATEST_TAG"
           if [ "$LAST_TAG" = "$LATEST_TAG" ]; then
-            echo "IS_NEW=0" >> "$GITHUB_ENV"
+            echo "is_new=0" >> "$GITHUB_OUTPUT"
           else
-            echo "IS_NEW=1" >> "$GITHUB_ENV"
+            echo "is_new=1" >> "$GITHUB_OUTPUT"
           fi
 
   build-release:
+    needs: check-release
+    if: needs.check-release.outputs.is_new == '1'
     runs-on: ubuntu-24.04
     steps:
       - name: build
         run: |
           ls -la
 
-  update-release-file:
-    runs-on: ubuntu-24.04
-    permissions:
-      contents: write
-    steps:
-      - name: Check out this repository
-        uses: actions/checkout@v4
+  # update-release-file:
+  #   runs-on: ubuntu-24.04
+  #   permissions:
+  #     contents: write
+  #   steps:
+  #     - name: Check out this repository
+  #       uses: actions/checkout@v4
 
-      - name: Update stored release version
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          echo "$LATEST_TAG" > .release_version
-          git add .release_version
-          git commit -m "Update last release tag to $LATEST_TAG"
-          git push
+  #     - name: Update stored release version
+  #       run: |
+  #         git config user.name "GitHub Actions"
+  #         git config user.email "actions@github.com"
+  #         echo "$LATEST_TAG" > .release_version
+  #         git add .release_version
+  #         git commit -m "Update last release tag to $LATEST_TAG"
+  #         git push
