--- a/.github/workflows/build-new-release-apk.yml
+++ b/.github/workflows/build-new-release-apk.yml
@@ -12,34 +12,49 @@ jobs:
       - name: Check out this repository
         uses: actions/checkout@v4
 
-      - name: Get latest release from NetherSX2-patch repository
+      - name: Get last known release
+        id: get-last-known-release
         run: |
-          LATEST_JSON="$(curl -s https://api.github.com/repos/Trixarian/NetherSX2-patch/releases/latest)"
-          LATEST_TAG="$(echo "$LATEST_JSON" | jq -r .tag_name)"
-          echo "LATEST_TAG=$LATEST_TAG" >> "$GITHUB_ENV"
-
-      - name: Compare with last known release
-        run: |
-          LAST_TAG=""
+          LAST_KNOWN_RELEASE=""
           if [ -f .release_version ]; then
-            LAST_TAG="$(cat .release_version)"
+            LAST_KNOWN_RELEASE="$(cat .release_version)"
           fi
-          echo "Last known release tag: $LAST_TAG"
-          echo "Latest release tag: $LATEST_TAG"
-          if [ "$LAST_TAG" = "$LATEST_TAG" ]; then
-            echo "is_new=0" >> "$GITHUB_OUTPUT"
-          else
-            echo "is_new=1" >> "$GITHUB_OUTPUT"
-          fi
+          echo "release=${LAST_KNOWN_RELEASE}" >> "$GITHUB_OUTPUT"
 
-  build-release:
-    needs: check-release
-    if: needs.check-release.outputs.is_new == '1'
-    runs-on: ubuntu-24.04
-    steps:
-      - name: build
+      - name: Get latest release from NetherSX2-patch repository
+        id: get-latest-release
         run: |
-          ls -la
+          LATEST_RELEASE_JSON="$(curl -s https://api.github.com/repos/Trixarian/NetherSX2-patch/releases/latest)"
+          LATEST_RELEASE="$(echo "$LATEST_RELEASE_JSON" | jq -r .tag_name)"
+          echo "release=${LATEST_RELEASE}" >> "$GITHUB_OUTPUT"
+
+      - name: test
+        run: |
+          echo ${{ steps.get-last-known-release.outputs.release }}
+          echo ${{ steps.get-latest-release.outputs.release }}
+
+      # - name: Compare with last known release
+      #   run: |
+      #     LAST_TAG=""
+      #     if [ -f .release_version ]; then
+      #       LAST_TAG="$(cat .release_version)"
+      #     fi
+      #     echo "Last known release tag: $LAST_TAG"
+      #     echo "Latest release tag: $LATEST_TAG"
+      #     if [ "$LAST_TAG" = "$LATEST_TAG" ]; then
+      #       echo "is_new=0" >> "$GITHUB_OUTPUT"
+      #     else
+      #       echo "is_new=1" >> "$GITHUB_OUTPUT"
+      #     fi
+
+  # build-release:
+  #   needs: check-release
+  #   if: needs.check-release.outputs.is_new == '1'
+  #   runs-on: ubuntu-24.04
+  #   steps:
+  #     - name: build
+  #       run: |
+  #         ls -la
 
   # update-release-file:
   #   runs-on: ubuntu-24.04
