--- a/.github/workflows/build-new-release-apk.yml
+++ b/.github/workflows/build-new-release-apk.yml
@@ -57,7 +57,7 @@ jobs:
       - name: build
         working-directory: NetherSX2-patch
         run: |
-          ls -la
+          ./patch-apk.sh
 
   # update-release-file:
   #   runs-on: ubuntu-24.04
