--- a/.github/workflows/build-new-release-apk.yml
+++ b/.github/workflows/build-new-release-apk.yml
@@ -61,13 +61,17 @@ jobs:
 
       - name: Patch AetherSX2 APK
         working-directory: NetherSX2-patch
-        run: ./patch-apk.sh
+        run: |
+          ./patch-apk.sh
+          mv *-patched.apk ../nethersx2-${{ needs.check-release.outputs.latest-release }}.apk
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: nethersx2-${{ needs.check-release.outputs.latest-release }}.apk
-          path: NetherSX2-patch/*-patched.apk
+          path: nethersx2-${{ needs.check-release.outputs.latest-release }}.apk
+          if-no-files-found: error
+          compression-level: 9
 
   # update-release-file:
   #   runs-on: ubuntu-24.04
