--- a/.github/workflows/build-new-release-apk.yml
+++ b/.github/workflows/build-new-release-apk.yml
@@ -43,9 +43,12 @@ jobs:
 
   build-apk:
     name: Build APK
-    needs: check-release
+    needs:
+      - check-release
     if: needs.check-release.outputs.is-new-release == '1'
     runs-on: ubuntu-24.04
+    outputs:
+      apk-name: ${{ steps.patch-aethersx2-apk.outputs.result-apk-name }}
     steps:
       - name: Check out NetherSX2-patch repository
         uses: actions/checkout@v4
@@ -60,18 +63,39 @@ jobs:
           sudo apt install -y xdelta3
 
       - name: Patch AetherSX2 APK
+        id: patch-aethersx2-apk
         working-directory: NetherSX2-patch
         run: |
           ./patch-apk.sh
-          mv *-patched.apk ../nethersx2-${{ needs.check-release.outputs.latest-release }}.apk
+          mv *-patched.apk ../${APK_NAME}
+          echo "result-apk-name=${APK_NAME}" >> "$GITHUB_OUTPUT"
+        env:
+          APK_NAME: nethersx2-patch-${{ needs.check-release.outputs.latest-release }}.apk
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
-          name: nethersx2-${{ needs.check-release.outputs.latest-release }}.apk
-          path: nethersx2-${{ needs.check-release.outputs.latest-release }}.apk
+          name: ${{ steps.patch-aethersx2-apk.outputs.result-apk-name }}
+          path: ${{ steps.patch-aethersx2-apk.outputs.result-apk-name }}
           if-no-files-found: error
           compression-level: 9
+
+  create-release:
+    name: Create release
+    needs:
+      - build-apk
+    if: ${{ needs.build-apk.result == 'success' }}
+    runs-on: ubuntu-24.04
+    permissions:
+      contents: write
+    steps:
+      - name: Download APK artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ needs.build-apk.outputs.apk-name }}
+
+      - run: |
+          ls -la
 
   # update-release-file:
   #   runs-on: ubuntu-24.04
