--- a/.github/workflows/build-new-release-apk.yml
+++ b/.github/workflows/build-new-release-apk.yml
@@ -19,12 +19,18 @@ jobs:
 
       - name: Get last known release
         id: get-last-known-release
-        run: |
-          LAST_KNOWN_RELEASE=""
-          if [ -f .release_version ]; then
-            LAST_KNOWN_RELEASE="$(cat .release_version)"
-          fi
-          echo "release=${LAST_KNOWN_RELEASE}" >> "$GITHUB_OUTPUT"
+        uses: satya-500/read-file-github-action@v1
+        with:
+          path: .release_version
+
+      # - name: Get last known release
+      #   id: get-last-known-release
+      #   run: |
+      #     LAST_KNOWN_RELEASE=""
+      #     if [ -f .release_version ]; then
+      #       LAST_KNOWN_RELEASE="$(cat .release_version)"
+      #     fi
+      #     echo "release=${LAST_KNOWN_RELEASE}" >> "$GITHUB_OUTPUT"
 
       - name: Get latest release from NetherSX2-patch repository
         id: get-latest-release
@@ -36,7 +42,7 @@ jobs:
       - name: Compare releases
         id: compare-releases
         run: |
-          if [ "${{ steps.get-last-known-release.outputs.release }}" = "${{ steps.get-latest-release.outputs.release }}" ]; then
+          if [ "${{ steps.get-last-known-release.outputs.contents }}" = "${{ steps.get-latest-release.outputs.release }}" ]; then
             echo "is-new=0" >> "$GITHUB_OUTPUT"
           else
             echo "is-new=1" >> "$GITHUB_OUTPUT"
