compare with current

--- a/.github/workflows/build-new-release-apk.yml
+++ b/.github/workflows/build-new-release-apk.yml
@@ -18,14 +18,11 @@ jobs:
       - name: Check out this repository
         uses: actions/checkout@v4
 
-      - name: Get last known release
-        id: get-last-known-release
-        run: |
-          LAST_KNOWN_RELEASE=""
-          if [ -f .release_version ]; then
-            LAST_KNOWN_RELEASE="$(cat .release_version)"
-          fi
-          echo "release=${LAST_KNOWN_RELEASE}" >> "$GITHUB_OUTPUT"
+      - name: Get last processed release
+        id: get-last-processed-release
+        uses: pozetroninc/github-action-get-latest-release@v0.8.0
+        with:
+          repository: ${{ github.repository }}
 
       - name: Get latest release from NetherSX2-patch repository
         id: get-latest-release
@@ -37,7 +34,7 @@ jobs:
       - name: Compare releases
         id: compare-releases
         run: |
-          if [ "${{ steps.get-last-known-release.outputs.release }}" = "${{ steps.get-latest-release.outputs.release }}" ]; then
+          if [ "${{ steps.get-last-processed-release.outputs.release }}" = "${{ steps.get-latest-release.outputs.release }}" ]; then
             echo "is-new=0" >> "$GITHUB_OUTPUT"
           else
             echo "is-new=1" >> "$GITHUB_OUTPUT"
@@ -101,7 +98,7 @@ jobs:
         run: |
           ORIGINAL_CHANGELOG="${{ needs.check-release.outputs.latest-release-description }}"
           TRIMMED_CHANGELOG="$(echo "${ORIGINAL_CHANGELOG}" | sed '/^### This release contains the following files:/,$d')"
-          echo -e "# From <${{ needs.check-release.outputs.latest-release-url }}>:\n\n${TRIMMED_CHANGELOG}" >> CHANGELOG.txt
+          echo -e "# From <${{ needs.check-release.outputs.latest-release-url }}>\n\n${TRIMMED_CHANGELOG}" >> CHANGELOG.txt
 
       - name: Create release
         uses: softprops/action-gh-release@v2
@@ -111,20 +108,3 @@ jobs:
           tag_name: ${{ needs.check-release.outputs.latest-release }}
           fail_on_unmatched_files: true
           make_latest: true
-
-  # update-release-file:
-  #   runs-on: ubuntu-24.04
-  #   permissions:
-  #     contents: write
-  #   steps:
-  #     - name: Check out this repository
-  #       uses: actions/checkout@v4
-
-  #     - name: Update stored release version
-  #       run: |
-  #         git config user.name "GitHub Actions"
-  #         git config user.email "actions@github.com"
-  #         echo "$LATEST_TAG" > .release_version
-  #         git add .release_version
-  #         git commit -m "Update last release tag to $LATEST_TAG"
-  #         git push
